fix(index)arregle un error de pocisionamiento del z-index

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -170,6 +170,7 @@ nav a:hover{
     border-radius: 10px;
     box-shadow: 0px 0px 10px #f5f5f55d;
     border: none;
+    z-index: 1;
 }
 
 .h2-hero{
